--- a/pom.xml
+++ b/pom.xml
@@ -98,14 +98,14 @@
 	
 	    <repository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Releases Nexus Repository</name>
-	      <url>http://43.204.111.45:9980/bhavani/repository/facebook-release/</url>
+	      <name>Facebook Releases Nexus Repository</name>
+	      <url>http://43.204.109.144:9980/bhavani/repository/facebook-release/</url>
 	    </repository>
 	    
 	    <snapshotRepository>
 	      <id>nexus</id>
-	      <name>Mithun Technologies Snapshot Nexus Repository </name>
-	      <url>http://43.204.111.45:9980/bhavani/repository/facebook-snapshot/</url>
+	      <name>Facebook Snapshot Nexus Repository </name>
+	      <url>http://43.204.109.144:9980/bhavani/repository/facebook-snapshot/</url>
 	    </snapshotRepository>
 	    
 	</distributionManagement>
