--- a/jenkinsfile
+++ b/jenkinsfile
@@ -1,7 +1,12 @@
 node{
+
 echo "Job name is :  ${env.JOB_NAME}"
 echo "Node name is:  ${env.NODE_NAME} "
+
+properties([buildDiscarder(logRotator(artifactDaysToKeepStr: '', artifactNumToKeepStr: '5', daysToKeepStr: '5', numToKeepStr: '')), pipelineTriggers([pollSCM('* * * * *')])])
+
 def mavenHome = tool name: 'maven3.8.4'
+
 //Get the code from GitHub Repo
 
 stage('CheckoutCode'){
